# noughts-and-crosses

./: .pre-commit-config.yaml  README.md  docker-compose.yml
client/: index.html  package-lock.json  package.json
client/src/: main.js  style.css
client/src/api/: game.js
client/src/assets/styles/: colors.css  main.css
client/src/components/: Board.vue  Cell.vue  HelloWorld.vue
client/src/composables/: useGame.js  useWebsocket.js
client/src/layouts/: MainLayout.vue
client/src/pages/: CreatePage.vue  GamePage.vue  HomePage.vue  JoinPage.vue
client/src/router/: index.js
noughts-and-crosses/: opencollection.yml
noughts-and-crosses/ws/: Join room copy copy.yml  Join room copy.yml  Join room.yml  folder.yml
server/: custom_types.py  dependencies.py  errors.py  index.html  main.py  pyproject.toml
server/api/: routes.py  schemas.py
server/api/websocket/: routes.py  schemas.py
server/api/websocket/handlers/: base.py  connection_handler.py  move_handler.py
server/board/: models.py
server/connections/: models.py
server/domain/: repositories.py
server/domain/entities/: board.py  game.py  player.py
server/domain/value_objects/: enums.py  position.py
server/infrastructure/: repositories.py  websocket_manager.py
server/players/: models.py
server/repository/: models.py
server/rooms/: models.py  router.py
server/services/: game_service.py
server/utils/: generate_id.py
